--- a/frontend/src/components/nav/Nav.css
+++ b/frontend/src/components/nav/Nav.css
@@ -1,5 +1,5 @@
 aside.menu-area {
-    background-color: var(--bg-dark);
+    background-color: #252733;
     box-shadow: 
     2px 0 10px 0 rgba(0,0,0,0.12)
     2px 0 10px 0 rgba(0,0,0,0.09);
@@ -8,13 +8,25 @@ aside.menu-area {
 .menu a {
     display: block;
     text-decoration: none;
-    color: #ffffff;
+    color: rgba(255, 255, 255, .7);
     font-weight: 300;
     padding: 15px;
 }
 
 .menu a:hover {
-    background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%);
+    background: #007bff;
+}
+
+.fa-home {
+    color: #ffffff;
+    font-size: 16px;
+    margin: 0px 10px;
+}
+
+.fa-users {
+    color: #ffffff;
+    font-size: 14px;
+    margin: 0px 10px;
 }
 
 @media(max-width: 576px) {
