--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,3 +1,7 @@
+header {
+    height: 85px;
+}
+
 header.header {
     background-color: #ffffff;
     padding: 0px 15px;
@@ -7,5 +11,6 @@ header.header {
 }
 
 header.header h1 {
-    font-size: 1.8em;
+    font-size: 1.2em;
+    font-weight: bold;
 }
