--- a/frontend/src/components/logo/Logo.css
+++ b/frontend/src/components/logo/Logo.css
@@ -1,8 +1,11 @@
 aside.logo {
-    background-color: var(--bg-dark);
+    background-color: #252733;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 aside.logo img {
